--- a/WiredUpWebApi/WiredUpWebApi.Models/WiredUpWebApi.Models.csproj
+++ b/WiredUpWebApi/WiredUpWebApi.Models/WiredUpWebApi.Models.csproj
@@ -45,10 +45,12 @@
     <Compile Include="City.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="Country.cs" />
+    <Compile Include="Post.cs" />
     <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="Message.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
