Added Data Layer:
1) Added DbContext
2) Added IRepository interface and EfRepository witch implements the
IRepository
3) Added IUnitOfWorkData that works with the repositories and
UnitOfWorkData witch implements the IUnitOfWorkData
4) Added automatic migrations for the database

--- a/WiredUpWebApi/WiredUpWebApi.Data/WiredUpWebApi.Data.csproj
+++ b/WiredUpWebApi/WiredUpWebApi.Data/WiredUpWebApi.Data.csproj
@@ -30,7 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.0.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.0.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,7 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\WiredUpDbConfiguration.cs" />
+    <Compile Include="WiredUpDbContext.cs" />
+    <Compile Include="EfRepository.cs" />
+    <Compile Include="IRepository.cs" />
+    <Compile Include="IUnitOfWorkData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitOfWorkData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WiredUpWebApi.Models\WiredUpWebApi.Models.csproj">
+      <Project>{A36DC8F8-1C9F-44FA-97FF-F74997A8EB65}</Project>
+      <Name>WiredUpWebApi.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
