--- a/WiredUpWebApi/packages/repositories.config
+++ b/WiredUpWebApi/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\WiredUpWebApi.Data\packages.config" />
   <repository path="..\WiredUpWebApi\packages.config" />
 </repositories>
