Added GET services in the MessagesController
1) GetSendMessages() - return the sent messages
2) GetReceviedMessages() - returns the received messages
2) GetAllMessages() - returns all messages for the current user

--- a/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
+++ b/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\MessageModels\MessageDetailedModel.cs" />
     <Compile Include="Models\MessageModels\MessageSendModel.cs" />
     <Compile Include="Models\UserModels\UserLoggedModel.cs" />
     <Compile Include="Models\UserModels\UserLoginModel.cs" />
