Modification of the UserRegisterModel
1) The registration now takes two authentication codes (authCode and
confirmAuthCode) that check for passwords match

2) UserChangePasswordModel added

--- a/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
+++ b/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
@@ -158,6 +158,7 @@
     </Compile>
     <Compile Include="Models\MessageModels\MessageDetailedModel.cs" />
     <Compile Include="Models\MessageModels\MessageSendModel.cs" />
+    <Compile Include="Models\UserModels\UserChangePasswordModel.cs" />
     <Compile Include="Models\UserModels\UserLoggedModel.cs" />
     <Compile Include="Models\UserModels\UserLoginModel.cs" />
     <Compile Include="Models\UserModels\UserRegisterModel.cs" />
