--- a/WiredUpWebApi/packages/repositories.config
+++ b/WiredUpWebApi/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\WiredUpWebApi.Data\packages.config" />
+  <repository path="..\WiredUpWebApi.Tests\packages.config" />
   <repository path="..\WiredUpWebApi\packages.config" />
 </repositories>
