--- a/WiredUpWebApi/WiredUpWebApi.Tests/WiredUpWebApi.Tests.csproj
+++ b/WiredUpWebApi/WiredUpWebApi.Tests/WiredUpWebApi.Tests.csproj
@@ -35,11 +35,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.0.1\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.0.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Web.Http, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\WiredUpWebApi\bin\System.Web.Http.dll</HintPath>
@@ -60,14 +68,20 @@
   <ItemGroup>
     <Compile Include="InMemoryHttpServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsersControllerIntegrationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WiredUpWebApi.Data\WiredUpWebApi.Data.csproj">
       <Project>{563835D5-9903-4F03-9125-B77D2FEAE640}</Project>
       <Name>WiredUpWebApi.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\WiredUpWebApi\WiredUpWebApi.csproj">
+      <Project>{a9c3c9a3-d72f-4080-8651-06016bd0e516}</Project>
+      <Name>WiredUpWebApi</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
