--- a/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
+++ b/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Controllers\UserPostsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -163,6 +164,8 @@
     <Compile Include="Models\UserModels\UserLoggedModel.cs" />
     <Compile Include="Models\UserModels\UserLoginModel.cs" />
     <Compile Include="Models\UserModels\UserRegisterModel.cs" />
+    <Compile Include="Models\UserPostModels\UserPostCreateModel.cs" />
+    <Compile Include="Models\UserPostModels\UserPostModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
