--- a/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
+++ b/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Models\UserModels\UserRegisterModel.cs" />
     <Compile Include="Models\UserPostModels\UserPostCreateModel.cs" />
     <Compile Include="Models\UserPostModels\UserPostModel.cs" />
+    <Compile Include="Models\UserPostModels\UserPostUpdateModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
