AddAllCountries service implemented
I've also added empty IntegrationTest class for the CountriesController

--- a/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
+++ b/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Models\CertificateModels\CertificateModel.cs" />
     <Compile Include="Models\CompanyModels\CompanyModel.cs" />
     <Compile Include="Models\CompanyModels\CompanySearchModel.cs" />
+    <Compile Include="Models\CountryModels\CountryModel.cs" />
     <Compile Include="Models\MessageModels\MessageModel.cs" />
     <Compile Include="Models\MessageModels\MessageSendModel.cs" />
     <Compile Include="Models\ProjectModels\ProjectCreateModel.cs" />
