--- a/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
+++ b/WiredUpWebApi/WiredUpWebApi/WiredUpWebApi.csproj
@@ -180,7 +180,9 @@
     <Compile Include="Models\UserModels\UserEditModel.cs" />
     <Compile Include="Models\UserModels\UserLoggedModel.cs" />
     <Compile Include="Models\UserModels\UserLoginModel.cs" />
+    <Compile Include="Models\UserModels\UserModel.cs" />
     <Compile Include="Models\UserModels\UserRegisterModel.cs" />
+    <Compile Include="Models\UserModels\UserSearchModel.cs" />
     <Compile Include="Models\UserPostModels\UserPostCreateModel.cs" />
     <Compile Include="Models\UserPostModels\UserPostModel.cs" />
     <Compile Include="Models\UserPostModels\UserPostUpdateModel.cs" />
