--- a/WiredUpWebApi/WiredUpWebApi.Models/WiredUpWebApi.Models.csproj
+++ b/WiredUpWebApi/WiredUpWebApi.Models/WiredUpWebApi.Models.csproj
@@ -43,6 +43,8 @@
     <Compile Include="Certificate.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="CompanyPost.cs" />
+    <Compile Include="ConnectionRequest.cs" />
+    <Compile Include="Constants\ConnectionRequestConstants.cs" />
     <Compile Include="Country.cs" />
     <Compile Include="Constants\CertificateConstants.cs" />
     <Compile Include="Constants\CityConstants.cs" />
