Tests for ConnectionsController added

--- a/WiredUpWebApi/WiredUpWebApi.Tests/WiredUpWebApi.Tests.csproj
+++ b/WiredUpWebApi/WiredUpWebApi.Tests/WiredUpWebApi.Tests.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="CertificatesControllerIntegrationTests.cs" />
     <Compile Include="ConnectionRequestsControllerIntegrationTests.cs" />
+    <Compile Include="ConnectionsControllerIntegrationTests.cs" />
     <Compile Include="CountriesControllerIntegrationTests.cs" />
     <Compile Include="InMemoryHttpServer.cs" />
     <Compile Include="MessagesControllerIntegrationTests.cs" />
